# carvalueml_mini_project

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  data_collection.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-hub.yml  docker-image.yml
artifacts/: preprocessor_obj.pkl  pretrained_model.pkl  test.csv  train.csv
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
dashboard/: Report.html
data/: data_preprocessed.csv
notebooks/: exploratory_data_analysis.ipynb  feature_backfill.ipynb  model_experimentation_ml.ipynb
src/: easy_and_fast_eda.py
src/CarValueML/: exception.py
src/CarValueML/components/: data_ingestion.py  data_transformation.py
src/CarValueML/pipelines/: predict_pipeline.py
