[project]
name = "serverless_carvalueml"
version = "0.1.0"
description = ""
authors = [
    {name = "amulyaprasanth",email = "amulyaprasanth301@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (<2)",
    "pandas (<2.2.0)",
    "hopsworks[great-expectations,python] (>=4.1.7,<5.0.0)",
    "sweetviz (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
